make getTable static method. Make getTable meothd more flexible